--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-ipywidgets==7.7.1
-matplotlib==3.7.0
+click==8.1.3
+Flask==2.2.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+MarkupSafe==2.1.2
 numpy==1.24.2
 pandas==1.5.3
-torch==1.12.1
-torchvision==0.13.1
-tqdm==4.64.0
+python-dateutil==2.8.2
+pytz==2022.7.1
+scikit-learn==1.2.1
+scipy==1.10.1
+six==1.16.0
+threadpoolctl==3.1.0
+Werkzeug==2.2.3
